# jxl_dynlink

./: .gitignore  Cargo.toml  readme.md
cargo/: .config.toml
src/: color.rs  common.rs  decoder.rs  decoder_enum.rs  decoder_struct.rs  encoder.rs  encoder_enum.rs  encoder_struct.rs  error.rs  lib.rs  metadata.rs  metadata_func.rs
tests/: decorder_test.rs  encorder_test.rs  encorder_test_2.rs
